--- a/test/index.html
+++ b/test/index.html
@@ -29,6 +29,7 @@
             window.GM_getResourceText = function() {return false;};
             window.GM_addStyle = function() {return false;};
         </script>
+        <script src="assistant.user.js"></script>
         <script src="../build/assistant.user.js"></script>
     </body>
 </html>
