gh-pages test fix

--- a/test/index.html
+++ b/test/index.html
@@ -3,11 +3,14 @@
         <title> Tests </title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
+        <link rel="stylesheet" href="mocha.css" />
     </head>
     <body>
         <div id="mocha"></div>
         <script src="../node_modules/mocha/mocha.js"></script>
+        <script src="mocha.js"></script>
         <script src="../node_modules/chai/chai.js"></script>
+        <script src="chai.js"></script>
         <script>
             mocha.setup({
               ui: 'bdd'
@@ -30,5 +33,6 @@
             window.GM_addStyle = function() {return false;};
         </script>
         <script src="../build/assistant.user.js"></script>
+        <script src="assistant.user.js"></script>
     </body>
 </html>
