--- a/test/mobile.html
+++ b/test/mobile.html
@@ -12,7 +12,7 @@
             mocha.setup({
               ui: 'bdd'
             });
-            mocha.globals(['GM_getValue','GM_setValue','GM_getResourceText','GM_addStyle','CSS','diff_match_patch','DIFF_DELETE','DIFF_INSERT','DIFF_EQUAL']);
+            mocha.globals(['diff_match_patch', 'DIFF_DELETE', 'DIFF_INSERT', 'DIFF_EQUAL', 'adguardAssistant']);
             var expect = chai.expect;
         </script>
 
@@ -23,13 +23,10 @@
             mocha.run();
         </script>
 
-        <script>
-            window.GM_getValue = function() {return false;};
-            window.GM_setValue = function() {return false;};
-            window.GM_getResourceText = function() {return false;};
-            window.GM_addStyle = function() {return false;};
-        </script>
+        <script src="../build/script.js"></script>
 
-        <script src="../build/assistant.user.js"></script>
+        <script>
+            adguardAssistant.start(console.log('check'));
+        </script>
     </body>
 </html>
