Fixes for mobile version

--- a/test/mobile.html
+++ b/test/mobile.html
@@ -16,7 +16,7 @@
             var expect = chai.expect;
         </script>
 
-        <script src="./tests.js"></script>
+        <script src="./tests-mobile.js"></script>
 
         <script>
             mocha.checkLeaks();
