Removing unused functions

--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,7 @@
             mocha.setup({
               ui: 'bdd'
             });
-            mocha.globals(['GM_getValue','GM_setValue','GM_getResourceText','GM_addStyle','CSS','diff_match_patch','DIFF_DELETE','DIFF_INSERT','DIFF_EQUAL']);
+            mocha.globals(['GM_getValue','GM_setValue','GM_getResourceText','GM_addStyle','CSS']);
             var expect = chai.expect;
         </script>
 
