--- a/test/mobile.html
+++ b/test/mobile.html
@@ -13,7 +13,7 @@
             mocha.setup({
               ui: 'bdd'
             });
-            mocha.globals(['CSS','diff_match_patch', 'DIFF_DELETE', 'DIFF_INSERT', 'DIFF_EQUAL', 'adguardAssistant']);
+            mocha.globals(['CSS', 'adguardAssistant']);
             var expect = chai.expect;
         </script>
 
