Add qunit puppeteer

--- a/test/embedded.html
+++ b/test/embedded.html
@@ -23,7 +23,7 @@
             mocha.run();
         </script>
 
-        <script src="../build/assistant.embedded.js"></script>
+        <script src="../build/release/embedded.js"></script>
 
     </body>
 </html>
