--- a/test/test.html
+++ b/test/test.html
@@ -2,7 +2,7 @@
     <head>
         <title> Tests </title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
+        <link rel="stylesheet" href="../node_modADG_addRuleules/mocha/mocha.css" />
     </head>
     <body>
         <div id="mocha"></div>
@@ -29,6 +29,6 @@
             window.GM_getResourceText = function() {return false;};
             window.GM_addStyle = function() {return false;};
         </script>
-        <script src="../build/assistant.user.js"></script>
+        <script src="../build/release/assistant.user.js"></script>
     </body>
 </html>
