--- a/tests/index.html
+++ b/tests/index.html
@@ -11,13 +11,13 @@
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
     <script>
+        window.DEBUG = true;
         window.GM_getValue = function() {return false;};
         window.GM_setValue = function() {return false;};
         window.GM_getResourceText = function() {return false;};
         window.GM_addStyle = function() {return false;};
     </script>
     <script src="qunit.js"></script>
-    <script src="assistant.user.js"></script>
 </body>
 
 </html>
